# autorisation

./: Cargo.toml  Makefile  README.md  SECURITY.md
examples/: autorisation.json  autorisation.yml
src/: lib.rs
src/domain/: form.rs  format.rs  mod.rs
src/infra/: fs.rs
src/render/: markdown.rs  pdf.rs
templates/: autorisation.typ
tests/: integration_pdf.rs  validation.rs
