[package]
name = "autorisation"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
authors = ["Votre Nom <you@example.com>"]
repository = "https://example.com/your/repo"
description = "CLI offline: génération d'autorisation de sortie (PDF/MD) pour écoles/familles"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
directories = "6.0"
regex = "1.11"
dialoguer = "0.12"
pdf-writer = "0.13"
which = "4.4.0"
genpdf = "0.2.0"

[dev-dependencies]
insta = { version = "1.43" }
proptest = { version = "1.0" }
tempfile = "3.6"

[features]
default = []

[[bin]]
name = "autorisation"
path = "src/bin/autorisation.rs"
